--- a/Form Validator/style.css
+++ b/Form Validator/style.css
@@ -26,3 +26,8 @@ h2 {
 .form {
   padding: 30px 40px;
 }
+.form-control {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
+}
