--- a/Form Validator/style.css
+++ b/Form Validator/style.css
@@ -31,3 +31,16 @@ h2 {
   padding-bottom: 20px;
   position: relative;
 }
+.form-control label {
+  color: #777;
+  display: block;
+  margin-bottom: 5px;
+}
+.form-control input {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  font-size: 14px;
+}
