--- a/Form Validator/style.css
+++ b/Form Validator/style.css
@@ -44,3 +44,13 @@ h2 {
   padding: 10px;
   font-size: 14px;
 }
+.form-control input:focus {
+  outline: 0;
+  border-color: #777;
+}
+.form-control.success input {
+  border-color: #2ecc71;
+}
+.form-control.error input {
+  border-color: #e74c3c;
+}
