--- a/Form Validator/style.css
+++ b/Form Validator/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
+:root {
+  --success-color: #2ecc71;
+  --error-color: #e74c3c;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -49,8 +54,11 @@ h2 {
   border-color: #777;
 }
 .form-control.success input {
-  border-color: #2ecc71;
+  border-color: var(--success-color);
 }
 .form-control.error input {
-  border-color: #e74c3c;
+  border-color: var(--error-color);
+}
+.form-control small {
+  color: var(--error-color);
 }
