--- a/Tech-Karo Pre -Course 2/home.css
+++ b/Tech-Karo Pre -Course 2/home.css
@@ -13,7 +13,7 @@
      }
      #let{
         padding-right: 500px;
-       
+        padding-left: 30px;
         width:100px;
         height:100px;
         margin-right:0px;
@@ -39,22 +39,20 @@
         width:400px;
         height:300px;
     }
-
-    .leap{
-       margin-bottom: 100px;
-        }
-    #do{
-        font-family:   sans-serif;
-        white-space: normal;
-        position: relative;
-        transform: translateY(-5.5em);
-        word-spacing: 10px;
-       padding-right: 50px;
-    }
-    #home{
+    ul {
+        transform: translateY(-4.5em);
+        list-style-type: none;
+        margin: 0;
+        padding-left: 1300px;
+        margin-left: 10px;
+        word-spacing: 17px;
         font-family: sans-serif;
-        padding-left: 900px;
-        white-space: nowrap;
-        
-    }
+       
+      }
+      
+      li {
+        display: inline;
+      }
+
+   
     
