--- a/Tech-Karo Pre -Course 2/home.css
+++ b/Tech-Karo Pre -Course 2/home.css
@@ -13,7 +13,7 @@
      }
      #let{
         padding-right: 500px;
-        padding-left: 30px;
+        padding-left: 50px;
         width:100px;
         height:100px;
         margin-right:0px;
@@ -26,8 +26,9 @@
      }
     p{
         text-align: center;
-        padding-left: 150px;
-        padding-right: 100px;
+        padding-left: 200px;
+        padding-right: 200px;
+        font-family: sans-serif;
     }
     h1{
         text-align: center;
@@ -37,7 +38,7 @@
     #tech{
         padding-left: 600px;
         width:400px;
-        height:300px;
+        height:350px;
     }
     ul {
         transform: translateY(-4.5em);
@@ -46,13 +47,25 @@
         padding-left: 1300px;
         margin-left: 10px;
         word-spacing: 17px;
-        font-family: sans-serif;
-       
       }
-      
-      li {
-        display: inline;
-      }
+     li {
+        display: inline-block;
+        
+        }
+        li a:hover:not(.active) {
+            background-color: gainsboro;
+          }
+          
+          li a{
+            
+              font-family: Arial;
+              font-size: large;
+              color:black;
+              text-decoration: none !important;
+            
+          }
+          
+
 
    
     
